--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -69,9 +68,9 @@
  
 @layer base {
   * {
-    @apply tailwind.config.jsborder-border;
+    @apply border-border;
   }
   body {
-    @apply tailwind.config.jsbg-background tailwind.config.jstext-foreground;
+    @apply bg-background text-foreground;
   }
 }
